--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="navbar_container">
                 <a href="/" id="navbar_logo">
-                    <img src="/images/ZK FLOORING (2).svg" alt="Logo">
+                    <img src="images/ZK FLOORING (2).svg" alt="Logo">
                 </a>
                 <!-- Hamburger Icon for Mobile -->
                 <div class="navbar_toggle" onclick="toggleNavbar()">
@@ -23,8 +23,8 @@
                 </div>
                 <nav>
                     <ul class="navbar_menu">
-                        <li><a href="/index.html" class="navbar_links navbar_btn">Home</a></li>
-                        <li><a href="/contact.html" class="navbar_links navbar_btn">Contact Us</a></li>
+                        <li><a href="index.html" class="navbar_links navbar_btn">Home</a></li>
+                        <li><a href="contact.html" class="navbar_links navbar_btn">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <video autoplay muted loop id="hero_video">
-            <source src="/VIDEOS/4.mp4" type="video/mp4">
+            <source src="VIDEOS/4.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero_container">
@@ -49,15 +49,15 @@
         <h2>Our Services</h2>
         <div class="services_grid">
             <div class="service_item">
-                <img src="/images/harwood.jpg" alt="Hardwood Flooring">
+                <img src="images/harwood.jpg" alt="Hardwood Flooring">
                 <h3>Hardwood Flooring</h3>
             </div>
             <div class="service_item">
-                <img src="/images/laminate.png" alt="Laminate Flooring">
+                <img src="images/laminate.png" alt="Laminate Flooring">
                 <h3>Laminate Flooring</h3>
             </div>
             <div class="service_item">
-                <img src="/images/vynil (2).jpg" alt="Vinyl Plank Flooring">
+                <img src="images/vynil (2).jpg" alt="Vinyl Plank Flooring">
                 <h3>Vinyl Plank Flooring</h3>
             </div>
         </div>
@@ -70,45 +70,45 @@
             <div class="projects_row">
                 <div class="projects_item">
                     <h3>Before</h3>
-                    <img src="/images/showcaseimages/IMG_5555.jpg" alt="showcase 1">
+                    <img src="images/showcaseimages/IMG_5555.jpg" alt="showcase 1">
                 </div>
                 <div class="projects_item">
                     <h3>After</h3>
-                    <img src="/images/showcaseimages/IMG_5574.jpg" alt="showcase 2">
+                    <img src="images/showcaseimages/IMG_5574.jpg" alt="showcase 2">
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/IMG_5775.jpg" alt="showcase 3">
+                        <img src="images/showcaseimages/IMG_5775.jpg" alt="showcase 3">
                     </div>
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/IMG_6211.jpg" alt="showcase 4">
+                        <img src="images/showcaseimages/IMG_6211.jpg" alt="showcase 4">
                     </div>
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/IMG_6515.jpg" alt="showcase 5">
+                        <img src="images/showcaseimages/IMG_6515.jpg" alt="showcase 5">
                     </div>
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/IMG_6664.jpg" alt="showcase 5">
+                        <img src="images/showcaseimages/IMG_6664.jpg" alt="showcase 5">
                     </div>
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/IMG_6214.jpg" alt="showcase 5">
+                        <img src="images/showcaseimages/IMG_6214.jpg" alt="showcase 5">
                     </div>
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/IMG_6518.jpg" alt="showcase 5">
+                        <img src="images/showcaseimages/IMG_6518.jpg" alt="showcase 5">
                     </div>
                 </div>
                 <div class="projects_item">
                     <div class="image-wrapper">
-                        <img src="/images/showcaseimages/1.jpg" alt="showcase 5">
+                        <img src="images/showcaseimages/1.jpg" alt="showcase 5">
                     </div>
                 </div>
             </div>
